# netcontrol

./: README.md
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/: Makefile.am  autogen.sh  configure.in  httpd.c  ip.c  ntop.8  ntop.h  report.c  sessions.c
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/.pc/: applied-patches
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/debian/: NEWS  README.Debian  changelog  control  copyright  get-orig-source.sh  logcheck  logcheck.paranoid  ntop-data.install  ntop.config  ntop.default  ntop.dirs  ntop.docs  ntop.init  ntop.install  ntop.manpages  ntop.postinst  ntop.postrm  ntop.preinst  ntop.templates  rules  watch
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/docs/: RedHat-rpmbuild-HOWTO.txt
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/html/: calendar-setup.js  calendar.js
another-packages/ntop-4.99.0-rc+ndpi5237+dfsg1/plugins/: Makefile.am  netflowPlugin.c
another-packages/sarg-2.3.1/: BETA-TESTERS  CMakeLists.txt  CONTRIBUTORS  ChangeLog  DONATIONS  Doxyfile  Makefile.in  README  README_cmake  aclocal.m4  auth.c  authfail.c  btree_cache.c  charset.c  config.h  configure  configure.in  convlog.c  css.c  css.tpl  dansguardian_log.c  dansguardian_report.c  datafile.c  decomp.c  denied.c  download.c  email.c  exclude.c  exclude_codes  getconf.c  grepday.c  htaccess  html.c  index.c  indexonly.c  ip2name.c  lastlog.c  log.c  longline.c  realtime.c  (+20 more)
another-packages/sarg-2.3.1/cfgaux/: mkinstalldirs
another-packages/sarg-2.3.1/debian/: README.Debian  changelog  control  copyright  dirs  docs  postinst  postrm  preinst  rules  sarg-reports  sarg-reports.1  sarg-reports.conf  sarg-reports.cron.daily  sarg-reports.cron.monthly  sarg-reports.cron.weekly  sarg.conf  sarg.users  sarg.usertab  undocumented  watch
another-packages/sarg-2.3.1/debian/patches/: 00list  02_config-file-references.dpatch
another-packages/sarg-2.3.1/documentation/: conf.txt  css.txt  decomp.txt  denied.txt  download.txt  exclude.txt  getconf.txt  grepday.txt  index.txt  log.txt  longline.txt  repday.txt  report.txt  sort.txt  totger.txt  usertab.txt  util.txt
another-packages/sarg-2.3.1/fonts/: README
another-packages/sarg-2.3.1/include/: btree_cache.h  conf.h  config.h.in  defs.h  extern.h  info.h
another-packages/sarg-2.3.1/languages/: Afrikaans  Bulgarian_windows1251  Catalan  Czech  Czech_UTF8  Dutch  English  French  German  Greek  Hungarian  Indonesian  Italian  Japanese  Latvian  Polish  Polish_windows1250  Portuguese  Romanian  Russian_UTF-8  Russian_koi8  Russian_windows1251  Serbian  Slovak  Spanish  Turkish  Ukrainian_windows1251
another-packages/sarg-2.3.1/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  bg.gmo  bg.po  ca.po  cs.po  de.po  el.po  es.po  fr.gmo  fr.po  hu.po  id.po  it.po  ja.po  lv.gmo  lv.po  nl.gmo  nl.po  pl.po  pt.po  ro.po  ru.gmo  ru.po  sarg.pot  sk.po  sr.po  tr.gmo  tr.po  uk.po  zh_CN.gmo  zh_CN.po
another-packages/sarg-2.3.1/sarg-php/: INSTALL  LANGUAGES  language.php  sarg-block-it.php  sarg-realtime.php  sarg-squidguard-block.php  sarg-squidguard-block2.php  style.php  translate.this
another-packages/sarg-2.3.1/sarg-php/locale/en_EN/LC_MESSAGES/: messages.mo  messages.po
another-packages/sarg-2.3.1/sarg-php/locale/fr/LC_MESSAGES/: messages.mo  messages.po
another-packages/sarg-2.3.1/sarg-php/locale/pt_BR/LC_MESSAGES/: messages.mo  messages.po
another-packages/sarg-2.3.1/sarg-php/locale/ru/LC_MESSAGES/: messages.mo  messages.po
another-packages/shaper-2.2.12-0.7.3/: README.shaper  cbq.init  shapecfg.spec
another-packages/shaper-2.2.12-0.7.3/debian/: README.Debian  changelog  control  copyright  rules  shapecfg.8  shapecfg.dirs  shapecfg.docs  shapecfg.files  shapecfg.manpages  shaper.config  shaper.cron.d  shaper.default  shaper.dirs  shaper.docs  shaper.postinst  shaper.postrm  shaper.templates
another-packages/shaper-2.2.12-0.7.3/shaper/: Makefile  shapecfg.c
another-packages/squidguard-1.5/: CHANGELOG  Makefile.in
another-packages/squidguard-1.5/debian/: README.source  changelog  control  copyright  dest-snippet.txt  rules  squidGuard.conf.default  squidguard-doc.dirs  squidguard-doc.doc-base  squidguard-doc.install  squidguard.NEWS  squidguard.README.Debian  squidguard.config  squidguard.dirs  squidguard.docs  squidguard.examples  squidguard.install  squidguard.logrotate  squidguard.manpages  squidguard.postinst  squidguard.postrm  squidguard.templates  update-squidguard  watch
another-packages/squidguard-1.5/doc/: extended.txt
another-packages/squidguard-1.5/samples/: Makefile.in  sample.conf.in  squidGuard-simple-de.cgi.in  squidGuard-simple.cgi.in  squidGuard.cgi.in
another-packages/squidguard-1.5/src/: Makefile.in  main.c  sg.l  sg.y.in  sgDb.c  sgDiv.c.in  version.h
another-packages/squidguard-1.5/test/: Makefile.in
netcontrol-packages/netcontrol-0.8.5/: COPYRIGHT  setup.py
netcontrol-packages/netcontrol-0.8.5/debian/: changelog  control  dirs  netcontrol-apache.install  netcontrol-backup.install  netcontrol-backup.postinst  netcontrol-bacula-common.install  netcontrol-bacula-dir.install  netcontrol-bind.install  netcontrol-cacic.install  netcontrol-cacic.postinst  netcontrol-controle-banda.install  netcontrol-controle-web.install  netcontrol-cron.install  netcontrol-daemons.install  netcontrol-dhcp.install  netcontrol-dns.install  netcontrol-dnsmasq.install  netcontrol-email.install  netcontrol-email.postinst  netcontrol-estacoes.install  netcontrol-filesystems.install  netcontrol-fm.install  netcontrol-gen-install.install  netcontrol-hddtemp.install  netcontrol-helpdesk.install  netcontrol-helpdesk.postinst  netcontrol-hosts.install  netcontrol-iptables-wizard.install  netcontrol-iptables.install  (+31 more)
netcontrol-packages/netcontrol-controle-web-ip-1.0/: Makefile  squid_ldap_auth_and_ip.c
netcontrol-packages/python-netcontroldhcp-1.0/: MANIFEST  setup.py
netcontrol-packages/python-netcontrolldap-1.0/: CHANGES.txt  MANIFEST  README.txt  setup.py
netcontrol-packages/python-netcontrolrede-1.0/: MANIFEST  setup.py
netcontrol-packages/python-passlib-1.5.3/: setup.cfg
(+788 files in other folders)
